# xserver

./: .appveyor.yml  .gitlab-ci.yml  CONTIBUTING.md  CONTRIBUTING.md  COPYING  HISTORY.md  MAINTAINERS  NEWS  README.md  meson.build  meson_options.txt  xorg-server.pc.in
.gitlab-ci/: check-ddx-build.sh  check-piglit-results.sh  cross-prereqs-build.sh  debian-install.sh  manpages-check
Xext/: bigreq.c  dpms.c  dpms.yml  dpmsproc.h  geext.c  geext.h  geext_priv.h  geint.h  hashtable.c  meson.build  panoramiX.c  panoramiX.h  panoramiXSwap.c  panoramiXh.h  panoramiXprocs.c  panoramiXsrv.h  saver.c  security.c  shape.c  shm.c  sleepuntil.h  sync.c  vidmode.c  xace.c  xace.h  xacestr.h  xcmisc.c  xf86bigfont.c  xres.c  xselinux_ext.c  xselinux_hooks.c  xtest.c  xvdisp.c  xvdisp.h  xvdix.h  xvdix_priv.h  xvmain.c  xvmc.c
Xi/: allowev.c  allowev.h  chgdctl.c  chgdctl.h  chgfctl.c  chgfctl.h  chgkbd.c  chgkbd.h  chgkmap.c  chgkmap.h  chgprop.c  chgprop.h  chgptr.c  chgptr.h  closedev.c  closedev.h  devbell.c  devbell.h  exevents.c  exglobals.h  extinit.c  getbmap.c  getbmap.h  getdctl.c  getdctl.h  getfctl.c  getfctl.h  getfocus.c  getfocus.h  getkmap.c  getkmap.h  getmmap.c  getmmap.h  getprop.c  getprop.h  getselev.c  getselev.h  getvers.c  getvers.h  grabdev.c  (+64 more)
composite/: compalloc.c  compext.c  compinit.c  compint.h  compositeext.h  compoverlay.c  compwindow.c  meson.build
config/: config-backends.h  config.c  dbus-core.c  dbus-core.h  meson.build  udev.c
damageext/: damageext.c  damageextint.h  meson.build
dbe/: dbe.c  meson.build  midbe.c  midbe.h
dix/: atom.c  colormap.c  colormap_priv.h  cursor.c  cursor_priv.h  devices.c  dispatch.c  dix_priv.h  dixfonts.c  dixstruct_priv.h  dixutils.c  enterleave.c  eventconvert.c  events.c  exevents_priv.h  extension.c  extension_priv.h  gc.c  generate-atoms  gestures.c  getevents.c  globals.c  glyphcurs.c  grabs.c  input_priv.h  inpututils.c  inpututils_priv.h  lookup.c  main.c  meson.build  pixmap.c  pixmap_api.c  privates.c  property.c  property_list.c  property_priv.h  protocol.txt  ptrveloc.c  region.c  reqhandlers_priv.h  (+16 more)
doc/: Xinput.xml  Xserver-spec.xml
dri3/: dri3.c  dri3.h  dri3_priv.h  dri3_request.c  meson.build
exa/: exa.c  exa.h  exa_accel.c  exa_classic.c  exa_driver.c  exa_glyphs.c  exa_mixed.c  exa_offscreen.c  exa_priv.h  exa_render.c  meson.build
fb/: fb.h  fbbits.h  fbcopy.c  fboverlay.c  fbpict.c  fbpict.h  fbpixmap.c  fbscreen.c  fbseg.c  fbtrap.c  fbwindow.c  meson.build  wfbrename.h
glamor/: glamor.c  glamor.h  glamor_addtraps.c  glamor_composite_glyphs.c  glamor_compositerects.c  glamor_copy.c  glamor_core.c  glamor_dash.c  glamor_egl.c  glamor_fbo.c  glamor_glyphblt.c  (+21 more)
hw/xfree86/sdk/: meson.build
hw/xnest/: Args.c  Args.h  Color.c  Color.h  Cursor.c  Display.c  Display.h  Events.c  Events.h  Font.c  GC.c  GCOps.c  Handlers.c  Init.c  Keyboard.c  Pixmap.c  Pointer.c  Screen.c  Screen.h  Visual.c  Visual.h  Window.c  XNFont.h  XNGC.h  XNWindow.h  Xnest.h  meson.build  multiscreen.c  multiscreen.h  parse-geometry.c  parse-geometry.h  properties.c  render.c  xcb.c  xnest-xcb.h
miext/namespace/: TODO  clientpriv.c  clientpriv.h  config.c  hook-client.c  hook-clientstate.c  hook-device.c  hook-dispatch.c  hook-ext-access.c  hook-ext-dispatch.c  hook-property.c  hook-receive.c  hook-resource.c  hook-selection.c  hook-send.c  hook-server.c  hook-windowproperty.c  hooks.h  meson.build  namespace.c  namespace.h
miext/sync/: meson.build  misync.h  misyncstr.h
test/xnest/: meson.build  parse-geometry.c
(+512 files in other folders)
