srcs = [
    'Args.c',
    'Color.c',
    'Cursor.c',
    'Display.c',
    'Events.c',
    'Font.c',
    'GC.c',
    'GCOps.c',
    'Handlers.c',
    'Init.c',
    'Keyboard.c',
    'Pixmap.c',
    'Pointer.c',
    'render.c',
    'Screen.c',
    'Window.c',
    '../../mi/miinitext.c',
    '../../mi/miinitext.h',
    'xcb.c',
    'xkb.c',
]

xcb_dep = dependency('xcb', required: true)
xcb_aux_dep = dependency('xcb-aux', required: true)
xcb_shape_dep = dependency('xcb-shape', required: true)
xcb_icccm_dep = dependency('xcb-icccm', required: true)
xcb_xkb_dep = dependency('xcb-xkb', required: true)

executable(
    'Xnest',
    srcs,
    include_directories: inc,
    dependencies: [
        common_dep,
        xcb_dep,
        xcb_aux_dep,
        xcb_shape_dep,
        xcb_icccm_dep,
        xcb_xkb_dep,
    ],
    link_with: [
        libxserver_main,
        libxserver,
        libxserver_xi_stubs,
        libxserver_xkb_stubs,
    ],
    install: true,
)

install_man(configure_file(
    input: 'man/Xnest.man',
    output: 'Xnest.1',
    configuration: manpage_config,
))
