srcs_miext_namespace = [
	'config.c',
	'namespace.c',
	'clientpriv.c',
	'hook-client.c',
	'hook-clientstate.c',
	'hook-device.c',
	'hook-dispatch.c',
	'hook-ext-access.c',
	'hook-ext-dispatch.c',
	'hook-property.c',
	'hook-receive.c',
	'hook-resource.c',
	'hook-selection.c',
	'hook-send.c',
	'hook-server.c',
	'hook-windowproperty.c',
]

libxserver_miext_namespace = static_library('libxserver_miext_namespace',
	srcs_miext_namespace,
	include_directories: inc,
	dependencies: common_dep,
)
